--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-nprogress-bar": "^2.4.3",
+    "nuqs": "^2.3.2",
     "react": "18",
     "react-dom": "18",
     "react-query": "^3.39.3",
